--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.4",
+    "framer-motion": "^11.3.31",
     "gatsby": "^5.13.5",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-react-svg": "^3.3.0",
@@ -26,6 +27,7 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use": "^17.5.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
