add netlify adapter

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "framer-motion": "^11.3.31",
     "gatsby": "^5.13.5",
+    "gatsby-adapter-netlify": "^1.1.7",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sharp": "^5.13.1",
