--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,7 +103,7 @@
   },
   "include": [
     "./src/**/*",
-    "./gatsby-node.ts",
+    "gatsby-node.js",
     "./gatsby-config.ts",
     "./plugins/**/*",
     "svg.d.ts"
